@@ -1660,8 +1660,10 @@ JsVar *jswrap_graphics_drawLineString(JsVar *parent, JsVar *var, int x, int y, J
       {"rotate", JSV_FLOAT, &rotate},
       {"twist", JSV_FLOAT, &twist}
   };
-  if (!jsvReadConfigObject(options, configs, sizeof(configs) / sizeof(jsvConfigObject)))
-    return;
+  if (!jsvReadConfigObject(options, configs, sizeof(configs) / sizeof(jsvConfigObject))) {
+    jsExceptionHere(JSET_ERROR, "Invalid options");
+    return 0;
+  }
   fontSize *= 16;
 
   x = x*16 - 8;
@@ -2770,6 +2772,92 @@ JsVar *jswrap_graphics_scroll(JsVar *parent, int xdir, int ydir) {
   graphicsScroll(&gfx, xdir, ydir);
   // update modified area
   graphicsSetVar(&gfx);
+  return jsvLockAgain(parent);
+}
+
+/*JSON{
+  "type" : "method",
+  "class" : "Graphics",
+  "name" : "blit",
+  "#if" : "!defined(SAVE_ON_FLASH) && !defined(ESPRUINOBOARD)",
+  "generate" : "jswrap_graphics_blit",
+  "params" : [
+    ["options","JsVar","options - see below"]
+  ],
+  "return" : ["JsVar","The instance of Graphics this was called on, to allow call chaining"],
+  "return_object" : "Graphics"
+}
+Blit one area of the screen (x1,y1 w,h) to another (x2,y2 w,h)
+
+```
+g.blit({
+  x1:0, y1:0,
+  w:32, h:32,
+  x2:100, y2:100,
+  setModified : true // should we set the modified area?
+});
+```
+
+Note: This uses repeated pixel reads and writes, so will not work on platforms that
+don't support pixel reads.
+*/
+JsVar *jswrap_graphics_blit(JsVar *parent, JsVar *options) {
+  JsGraphics gfx; if (!graphicsGetFromVar(&gfx, parent)) return 0;
+  int sw = gfx.data.width;
+  int sh = gfx.data.height;
+  int x1=0,y1=0,w=0,h=0,x2=0,y2=0;
+  bool setModified = false;
+  jsvConfigObject configs[] = {
+      {"x1", JSV_INTEGER, &x1},
+      {"y1", JSV_INTEGER, &y1},
+      {"w", JSV_INTEGER, &w},
+      {"h", JSV_INTEGER, &h},
+      {"x2", JSV_INTEGER, &x2},
+      {"y2", JSV_INTEGER, &y2},
+      {"setModified", JSV_BOOLEAN, &setModified}};
+  if (!jsvIsObject(options) ||
+      !jsvReadConfigObject(options, configs, sizeof(configs) / sizeof(jsvConfigObject))) {
+    jsExceptionHere(JSET_ERROR, "Invalid options");
+    return 0;
+  }
+  int ex;
+  // clip source positions
+  if (x1<0) {
+    x2 -= x1;
+    w += x1;
+    x1 = 0;
+  }
+  if (y1<0) {
+    y2 -= y1;
+    h += y1;
+    y1 = 0;
+  }
+  ex = (x1+w) - sw;
+  if (ex > 0) w -= ex;
+  ex = (y1+h) - sh;
+  if (ex > 0) h -= ex;
+  // clip destination positions
+  if (x2<0) {
+    x1 -= x2;
+    w += x2;
+    x2 = 0;
+  }
+  if (y2<0) {
+    y1 -= y2;
+    h += y2;
+    y2 = 0;
+  }
+  ex = (x2+w) - sw;
+  if (ex > 0) w -= ex;
+  ex = (y2+h) - sh;
+  if (ex > 0) h -= ex;
+  if (w>0 || h>0) {
+    gfx.blit(&gfx, x1,y1,w,h,x2,y2);
+    if (setModified) {
+      graphicsSetModified(&gfx, x2,y2,x2+w,y2+h);
+      graphicsSetVar(&gfx);
+    }
+  }
   return jsvLockAgain(parent);
 }
 
